== master
* Do not perform lookup if no params are passed to lookup

== 0.3.1
* Extend private interface for services

== 0.3.0
* Warden serialization is now configurable

== 0.2.1
* Updated documentation for test helpers
* Updated documentation for using monban in console
* Fixed bug with failure app now allowing actual http auth to occur

== 0.2.0
* `sign_in` test helper now returns the user
* `authenticate_session` arguments are coerced to Hash
* Monban::BackDoor can be configured with a block
* Document validation suggestions
* Document locale suggestions
* Deprecate usage of Monban.user_class in favor of Monban.config.user_class
* Make warden strategy configurable via Monban.config.authentication_strategy
* Extract warden setup into the WardenSetup class
* Document layout suggestions

== 0.1.1
* Link to Rubydoc in documentation
* Fix header in documentation
* Fix no_login_redirect to default to a properly named controller
* Fix documentation reference to sign_up to mention user_params instead of user

== 0.1.0
* Fix PasswordStrategy to use configuration options
* Documentation
* Renamed encryption to hashing
* Renamed encrypted to digested
* Renamed unencrypted to undigested
* A configuration for `no_login_redirect` was added. This accepts anything that
  can be passed to `redirect_to` and is used when `require_login` is called with
  no logged in user.
* A configuration for `no_login_handler` was added. This allows developers to
  completely customize the response when `require_login` is called with no
  logged in user.

== 0.0.15
* Delegate user_class correctly so that config returns class
* Fixed issue authenticate session not allowing for multiple fields
* Do not hardcode User class
* Add signed out routing constraint
* Backfill NEWS.md

== 0.0.14
* Encryption of empty string is empty string.
* Remove last trace of generators.

== 0.0.13
* Monban requires Rails 4+.
* Move generators to the monban-generators gem.

== 0.0.12