@@ -16,7 +16,7 @@ module Monban
       # Performs the service
       # @see Monban::Configuration.default_creation_method
       def perform
-        Monban.config.creation_method.call(user_params.to_hash)
+        Monban.config.creation_method.call(user_params)
       end
 
       private
